# logos-package-manager-ui

./: .gitignore  CMakeLists.txt  README.md  flake.nix  metadata.json
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp  mainwindow.cpp
nix/: app.nix  default.nix  lib.nix
src/: PackageListModel.cpp  PackageListModel.h  PackageManager.qml  PackageManagerBackend.cpp  PackageManagerBackend.h  PackageTypes.cpp  PackageTypes.h  PackagesFilterProxy.cpp  PackagesFilterProxy.h  PackagesPagingProxy.cpp  PackagesPagingProxy.h  RowActionResolver.h  package_manager_ui.rep  package_manager_ui_interface.h  package_manager_ui_plugin.cpp  package_manager_ui_plugin.h  package_manager_ui_resources.qrc
src/qml/: BackendStore.qml  PackageManager.qml
src/qml/Controls/: ActionPill.qml  InstallButton.qml  LoadingSpinner.qml  PackageActionButton.qml  ReleasePicker.qml  StatusBadge.qml  qmldir
src/qml/Panels/: CategorySidebar.qml  DetailsPane.qml  DetailsPanel.qml  HeaderBar.qml  InstallDepsConfirm.qml  PackageList.qml  PackageRow.qml  RunActionsConfirm.qml  TableHeader.qml  qmldir
src/qml/icons/: PackageIcons.qml  qmldir
tests/: ui-tests.mjs
